--- a/Odoo/dockerfile
+++ b/Odoo/dockerfile
@@ -1,3 +1,3 @@
-
-FROM odoo:16
-COPY ./odoo.conf /etc/odoo/odoo.conf
+FROM odoo:16.0
+COPY ./custom_addons /mnt/extra-addons
+RUN chmod -R 777 /mnt/extra-addons
