--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,48 @@
+version: "3.8"
 services:
-  test_service:
-    image: alpine
-    command: echo "Docker Compose is working!"
+  odoo:
+    build:
+      context: ./odoo
+    ports:
+      - "8069:8069"
+    volumes:
+      - ./odoo/custom_addons:/mnt/extra-addons
+    depends_on:
+      - db
+
+  db:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: odoo
+      POSTGRES_PASSWORD: odoo
+      POSTGRES_DB: odoo
+    ports:
+      - "5432:5432"
+
+  backend:
+    build:
+      context: ./backend
+    ports:
+      - "5000:5000"
+    environment:
+      MONGO_URI: mongodb://mongo:27017/mydb
+    depends_on:
+      - mongo
+
+  frontend:
+    build:
+      context: ./frontend
+    ports:
+      - "5000:5000"
+    depends_on:
+      - backend
+
+  mongo:
+    image: mongo:5.0
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+volumes:
+  mongo-data:
